--- a/schedulemanager/src/main/res/values/strings.xml
+++ b/schedulemanager/src/main/res/values/strings.xml
@@ -1,3 +1,32 @@
 <resources>
-    <string name="app_name">schedulemanager</string>
+    <string name="jqyzyh_schedule_monday">周一</string>
+    <string name="jqyzyh_schedule_tuesday">周二</string>
+    <string name="jqyzyh_schedule_wednesday">周三</string>
+    <string name="jqyzyh_schedule_thursday">周四</string>
+    <string name="jqyzyh_schedule_friday">周五</string>
+    <string name="jqyzyh_schedule_saturday">周六</string>
+    <string name="jqyzyh_schedule_sunday">周日</string>
+    <string-array name="jqyzyh_schedule_week">
+        <item >星期日</item>
+        <item >星期一</item>
+        <item >星期二</item>
+        <item >星期三</item>
+        <item >星期四</item>
+        <item >星期五</item>
+        <item >星期六</item>
+    </string-array>
+    <string-array name="jqyzyh_schedule_months">
+        <item >一月</item>
+        <item >二月</item>
+        <item >三月</item>
+        <item >四月</item>
+        <item >五月</item>
+        <item >六月</item>
+        <item >七月</item>
+        <item >八月</item>
+        <item >九月</item>
+        <item >十月</item>
+        <item >十一月</item>
+        <item >十二月</item>
+    </string-array>
 </resources>
